[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enviroment.gd" type="Script" id=1]
[ext_resource path="res://Ground.gd" type="Script" id=2]
[ext_resource path="res://Flag.png" type="Texture" id=3]
[ext_resource path="res://wheel.png" type="Texture" id=4]
[ext_resource path="res://Car.gd" type="Script" id=5]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.5001, 16.5922 )

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.0

[sub_resource type="GradientTexture" id=4]

[sub_resource type="CircleShape2D" id=5]
radius = 7.12676

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 19.9093, 6.44748 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 21.6589, 307.901 )

[node name="Enviroment" type="Node2D"]
script = ExtResource( 1 )

[node name="Ground" type="RigidBody2D" parent="."]
mode = 1
physics_material_override = SubResource( 1 )
can_sleep = false
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ground"]
modulate = Color( 0.921569, 0.0901961, 0.0901961, 1 )
self_modulate = Color( 0.890625, 0.111328, 0.111328, 1 )
polygon = PoolVector2Array( 0.865662, 598.168, 1026.11, 598.168, 1024.26, 564.857, 2.71625, 564.857 )

[node name="Polygon2D" type="Polygon2D" parent="Ground"]

[node name="Goal" type="Area2D" parent="Ground"]
position = Vector2( 512, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/Goal"]
position = Vector2( 0, -5.83176 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Ground/Goal"]
texture = ExtResource( 3 )

[node name="Car" type="RigidBody2D" parent="."]
position = Vector2( 300, 300 )
physics_material_override = SubResource( 3 )
gravity_scale = 5.0
can_sleep = false
script = ExtResource( 5 )

[node name="Body" type="Sprite" parent="Car"]
texture = SubResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 40, 20 )

[node name="Wheel1" type="Sprite" parent="Car"]
position = Vector2( -11.9318, 11.7364 )
scale = Vector2( 1.34342, 1.49367 )
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 20, 20 )

[node name="Wheel2" type="Sprite" parent="Car"]
position = Vector2( 12.7517, 11.7364 )
scale = Vector2( 1.34342, 1.49367 )
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 20, 20 )

[node name="CoWheel1" type="CollisionShape2D" parent="Car"]
position = Vector2( -12.0198, 11.8051 )
shape = SubResource( 5 )

[node name="CoWheel2" type="CollisionShape2D" parent="Car"]
position = Vector2( 12.8783, 12.0198 )
shape = SubResource( 5 )

[node name="CoBody" type="CollisionShape2D" parent="Car"]
position = Vector2( 0, -3.60608 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="State" type="Label" parent="."]
margin_top = 20.0
margin_right = 40.0
margin_bottom = 34.0
text = "State:"

[node name="Reward" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Reward:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Barier" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barier"]
position = Vector2( -15.1625, 293.92 )
shape = SubResource( 7 )
[connection signal="area_entered" from="Ground/Goal" to="." method="_on_Goal_area_entered"]
[connection signal="body_entered" from="Ground/Goal" to="." method="_on_Goal_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
